feat: review-pg

--- a/jacareview/app/globals.css
+++ b/jacareview/app/globals.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'yaro';
+  src: url('../public/fonts/Yaro.ttf');
+}
+
 :root {
   --jgreen: #388175;
   --jyellow: #F6BD41;
-  
 }
