change scrollbar to hidden unless hovering

--- a/jacareview/app/globals.css
+++ b/jacareview/app/globals.css
@@ -25,16 +25,16 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: white;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #388175;
+  background: white;
   border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #388175;
 }
